2007-03-06  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump

=== gnome-user-share 0.11 ===
	
2007-03-06  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

2007-03-06  Alexander Larsson  <alexl@redhat.com>

        * dav_user_2.0.conf:
        * dav_user_2.2.conf:
        * user_share.c:
	Use PUBLICSHARE from xdg-user-dirs as default.
	Fall back to ~/Public otherwise.

2007-01-24  Matthias Clasen  <mclasen@redhat.com>

	* gnome-user-share-properties.desktop.in: Remove
	invalid Applications category, add X-GNOME-NetworkSettings.

2006-12-15  Pema Geyleg  <pgeyleg@gmail.com>

	* cofigure.in: Added 'dz' to ALL_LINGUAS

2006-12-12  Ankit Patel  <ankit644@yahoo.com>

	* configure.in: Added 'gu' in ALL_LINGUAS

2006-12-08  Alexander Larsson  <alexl@redhat.com>

	* file-share-properties.c: (main):
	Add textdomain boiler plate (#383092)

2006-07-20  Leonid Kanter <leon@asplinux.ru>

        * configure.in: Added "ru" to ALL_LINGUAS

2006-04-19  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post-release version bump
	
=== gnome-user-share 0.10 ===
	
2006-04-19  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release.

2006-04-19  Alexander Larsson  <alexl@redhat.com>

	* user_share.c (get_share_name):
	Include hostname in name string (if availible) (#335879)

2006-04-19  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am:
	* configure.in:
	* dav_groupfile:
	* dav_user.conf:
	* dav_user_2.0.conf:
	* dav_user_2.2.conf:
	Add configuration for httpd 2.2.
	Autodetect version or allow manual specification.

2006-04-17  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove obsolete entry for no_NO
	* po/no.po: And the translation.

2006-01-24  Clytie Siddall <clytie@riverland.net.au>

	* configure.in	Added vi in ALL_LINGUAS line.
	
	2006-01-06  Kjartan Maraas <kmaraas@gnome.org>

	* configure.in: Add nb and no to ALL_LINGUAS.

2006-01-04  Christophe Merlet  <redfox@redfoxcenter.org>
